# dane-object-classification-worker

./: .dockerignore  .gitignore  Dockerfile  README.md  codemeta.json  pyproject.toml  worker.py
