[tool.poetry]
name = "dane-object-classification-worker"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
dane = "^0.3.2"
torch = "^1.12.1"
torchvision = "^0.13.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.7.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
]
addopts = [
  "--cov",
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
  'dane.*',
  'yaml',
  'yacs.*',
  'torchvision.*',
]
ignore_missing_imports = true
